apps/media/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: media
  labels:
    app: metube
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: metube
  type: ClusterIP
