apps/media/metube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: security-tinyauth-protect@kubernetescrd,tools-sablier-1h@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Youtube Downloader"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "si-youtube"
    gethomepage.dev/name: "MeTube"
    gethomepage.dev/href: "https://metube.valab.top"
spec:
  tls:
    - hosts:
        - tb.valab.top
        - metube.valab.top
      secretName: metube-tls
  rules:
    - host: tb.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
    - host: metube.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
